TypeScriptの最低限ビルド構成を追加

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -89,5 +90,4 @@ typings/
 # dotenv environment variables file
 .env
 
-
-
+dist/
