--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "author": "mugi-uno <mugi.uno@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc lib/index.ts --outDir dist/"
+    "build": "tsc lib/index.ts --outDir dist/",
+    "test": "tsc --outDir build/ && ava build/**/*.test.js"
   },
   "devDependencies": {
+    "ava": "^0.22.0",
     "typescript": "^2.5.3"
   }
 }
