原稿料や講演料等についての源泉徴収税のロジックを追加
https://www.nta.go.jp/taxanswer/gensen/2795.htm

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "types/type.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "tsc -p tsconfig.test.json && ava build/**/*.test.js"
+    "test": "tsc -p tsconfig.test.json && ava build/**/**/*.test.js"
   },
   "devDependencies": {
     "ava": "^0.22.0",
