--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "types/type.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "tsc -p tsconfig.test.json && ava",
+    "test": "rm -dr ./build; tsc -p tsconfig.test.json && ava",
     "lint": "tslint -c tslint.json 'test/**/**/*.ts' 'lib/**/**/*.ts' ",
     "lint:fix": "tslint -c tslint.json --fix 'test/**/**/*.ts' 'lib/**/**/*.ts' "
   },
