coverageを計測できるようにした

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "build": "tsc",
     "test": "rm -dr ./build; tsc -p tsconfig.test.json && ava",
     "lint": "tslint -c tslint.json 'test/**/**/*.ts' 'lib/**/**/*.ts' ",
-    "lint:fix": "tslint -c tslint.json --fix 'test/**/**/*.ts' 'lib/**/**/*.ts' "
+    "lint:fix": "tslint -c tslint.json --fix 'test/**/**/*.ts' 'lib/**/**/*.ts' ",
+    "coverage": "nyc yarn test"
   },
   "devDependencies": {
     "ava": "^0.22.0",
+    "nyc": "^11.2.1",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3"
   },
