coverallsでカバレッジを見れるよう変更

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,6 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: yarn lint
-      - run: yarn test
+      - run: yarn coverage:send
 
 
