docsを自動で生成するよう変更

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,17 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: yarn lint
-      - run: yarn coverage:send
+      - run:
+          name: Lint
+          command: yarn lint
 
+      - run:
+          name: Test & Coverage
+          command: yarn coverage:send
 
+      - run:
+          name: Generate docs
+          command: yarn docs
+
+      - store_artifacts:
+          path: ~/repo/docs
